# cmake-introduction

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
.circleci/: config.yml
documentation/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt  config.h.in  core.h  lapack_wrapper.h  matrix.h  vector.h
src/: CMakeLists.txt  core.cxx  main.cxx
tests/: CMakeLists.txt  test-01.cxx
